--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+  background-color:white;
+  font-family: Sans-serif;
+}
 
+h1 {
+  color: grey;
+}
 
+input {
+  display: block;
+  width: 150px;
+  margin: auto;
+}
+
+table {
+  border: 0px;
+}
+
+p {
+  border: 0px;
+  padding: 5px;
+}
